# pyccsds

./: README.txt  pyproject.toml  setup.cfg  setup.py
docs/: apy.rst  conf.py  index.rst
docs/user-guide/: index.rst
licenses/: ccsdspy.md
pyccsds/: CITATION.rst  __init__.py  decode.py  interface.py  version.py
pyccsds/tests/: test_PacketField.py
src/pyccsds/: __init__.py  decode.py  interface.py
tests/: test_Packet.py  test_PacketField.py
