[metadata]
name = pyccsds
version = 1.0.0
author = Joey Mukherjee
author_email = joey@swri.org
description = IO Interface for Reading CCSDS Data in Python.
long_description = file: README.txt
long_description_content_type = text/plain
url = http://github.com/joeymukherjee/pyccsds
license = BSD 3-Clause License
license_files = LICENSE.txt

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where=src

[options.extras_require]
tests =
    pytest
    flake8
