[metadata]
name = pyccsds
version = 1.0.0
author = Joey Mukherjee
author_email = joey@swri.org
description = IO Interface for Reading CCSDS Data in Python.
license_file = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/plain
url = http://github.com/joeymukherjee/pyccsds
license = BSD 3-Clause License
license_files = LICENSE.txt

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research

[options]
package_dir=
    =pyccsds
packages=find:
python_requires = >=3.6
install_requires =
    numpy

[options.extras_require]
dev =
    black
    flake8

test =
    tox
    pytest
    pytest-astropy  # enables --doctest-rst
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

[options.packages.find]
where=pyccsds


[tool:pytest]
testpaths = "pyccsds" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  pyccsds/__init*
  pyccsds/conftest.py
  pyccsds/*setup_package*
  pyccsds/tests/*
  pyccsds/*/tests/*
  pyccsds/extern/*
  pyccsds/version*
  */pyccsds/__init*
  */pyccsds/conftest.py
  */pyccsds/*setup_package*
  */pyccsds/tests/*
  */pyccsds/*/tests/*
  */pyccsds/extern/*
  */pyccsds/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_

[flake8]
select = E101,E11,E111,E112,E113,E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E133,E20,E211,E231,E241,E242,E251,E252,E26,E265,E266,E27,E301,E302,E303,E304,E305,E306,E401,E402,E502,E701,E711,E712,E713,E714,E722,E731,E901,E902,F822,F823,W191,W291,W292,W293,W391,W601,W602,W603,W604,W605,W690
exclude = .txt, .rst, .md
